package it.polimi.moveflow.model;

public enum ClasseRotazione {
    ALTA,
    MEDIA,
    BASSA
}
