package it.polimi.moveflow.model;

public enum Ruolo {
    ADMIN,
    OPERATORE,
    RESPONSABILE
}
