package it.polimi.moveflow.model;

public enum StatoUbicazione {
    LIBERA,
    OCCUPATA,
    BLOCCATA
}
