package it.polimi.moveflow.model;

public enum TipoMovimento {
    CARICO,
    SPOSTAMENTO,
    SCARICO
}
